--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,14 @@
     <color name="colorprogressbar">#38414A</color>
     <color name="coloricon">#CCCCCC</color>
 
+    <color name="navy_blue">#0F4C75</color>
+    <color name="dark_navy_blue">#1B262C</color>
+    <color name="blue">#3282B8</color>
+    <color name="royal_blue">#002549</color>
+    <color name="deep_sky_blue">#1E90FF</color>
+    <color name="grey_white">#cccccc</color>
+    <color name="grey_black">#2c2c2c</color>
+
+    <color name="black_for_bg">#171717</color>
+    <color name="shimmer_bg_color">#dddddd</color>
 </resources>
