--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,4 +38,25 @@
         <item name="cornerSize">5%</item>
     </style>
 
+        <!-- Base application theme. -->
+        <style name="Theme.ReadNewsApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+
+            <item name="android:windowBackground">@color/white</item>
+
+            <item name="colorPrimary">@color/white</item>
+            <item name="colorPrimaryDark">@color/white</item>
+            <item name="colorPrimaryVariant">@color/colorbottambar</item>
+            <item name="colorOnPrimary">@color/colorbottambar</item>
+            <item name="android:textColorPrimary">@color/white</item>
+
+            <!-- Secondary brand color. -->
+            <item name="colorSecondary">@color/teal_200</item>
+            <item name="colorSecondaryVariant">@color/teal_700</item>
+
+            <item name="colorOnSecondary">@color/white</item>
+            <item name="android:textColor">@color/dark_navy_blue</item>
+            <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
+
+        </style>
+
 </resources>
